--- a/bootbling.html
+++ b/bootbling.html
@@ -31,7 +31,7 @@
   <div class="row no-gutters">
   <div class="col-sm-6 col-lg-3 col-md-4">
     <div class="card bg-dark text-white">
-      <img class="card-img" src="images/boot1.jpg" alt="Card image">
+      <img class="card-img" src="images/boot1.jpg" width="800" alt="Card image">
       <div class="card-img-overlay">
         <h5 class="card-title">Simple Chain</h5>
         <p class="card-text">Boot bling featuring a simple silver chain.</p>
