--- a/bootbling.html
+++ b/bootbling.html
@@ -31,7 +31,7 @@
   <div class="row no-gutters">
   <div class="col-sm-6 col-lg-3 col-md-4">
     <div class="card bg-dark text-white">
-      <img class="card-img" src="images/boot1.jpg" width="800" alt="Card image">
+      <img class="card-img" src="images/boot1.jpg" alt="Card image">
       <div class="card-img-overlay">
         <h5 class="card-title">Simple Chain</h5>
         <p class="card-text">Boot bling featuring a simple silver chain.</p>
@@ -40,7 +40,7 @@
   </div>
   <div class="col-sm-6 col-lg-3 col-md-4">
     <div class="card bg-dark text-white">
-      <img class="card-img" src="images/Boot2.jpg" alt="Card image">
+      <img class="card-img" src="images/boot2.jpg" alt="Card image">
       <div class="card-img-overlay">
         <h5 class="card-title">Peace Pendant</h5>
         <p class="card-text">Boot bling featuring a peace symbol pendant</p>
@@ -49,7 +49,7 @@
   </div>
   <div class="col-sm-6 col-lg-3 col-md-4">
     <div class="card bg-dark text-white">
-      <img class="card-img" src="images/Boot3.jpg" alt="Card image">
+      <img class="card-img" src="images/boot3.jpg" alt="Card image">
       <div class="card-img-overlay">
         <h5 class="card-title">Horse Pendant</h5>
         <p class="card-text">Boot bling featuring a horse pendant.</p>
@@ -58,7 +58,7 @@
   </div>
   <div class="col-sm-6 col-lg-3 col-md-4">
     <div class="card bg-dark text-white">
-      <img class="card-img" src="images/Boot4.jpg" alt="Card image">
+      <img class="card-img" src="images/boot4.jpg" alt="Card image">
       <div class="card-img-overlay">
         <h5 class="card-title">Variety Pack</h5>
         <p class="card-text">a variety featuring several different styles of boot bling.</p>
