--- a/bootbling.html
+++ b/bootbling.html
@@ -2,13 +2,14 @@
 <html lang="en-US">
 
 <head>
-  <title>Bracelets</title>
+  <title>Bootbling</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Montserrat" rel="stylesheet">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.min.css'>
   <link rel="stylesheet" href="css/style.css" />
 
 
@@ -27,46 +28,30 @@
         <i class="fa fa-search"></i><input type="text" />
     </div>
   </header>
-  <div id="MainContent">
-  <div class="row no-gutters">
-  <div class="col-sm-6 col-lg-3 col-md-4">
-    <div class="card bg-dark text-white">
-      <img class="card-img" src="images/boot1.jpg" alt="Card image">
-      <div class="card-img-overlay">
-        <h5 class="card-title">Simple Chain</h5>
-        <p class="card-text">Boot bling featuring a simple silver chain.</p>
-      </div>
-    </div>
+<div class="container">
+  <div class="row">
+    <a href="images/lightbox1.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+      <img src="images/lightbox1CROP.jpg" class="img-fluid rounded">
+    </a>
+    <a href="images/lightbox2.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+      <img src="images/lightbox2CROP.jpg" class="img-fluid rounded">
+    </a>
+    <a href="images/lightbox3.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+      <img src="images/lightbox3CROP.jpg" class="img-fluid rounded">
+    </a>
   </div>
-  <div class="col-sm-6 col-lg-3 col-md-4">
-    <div class="card bg-dark text-white">
-      <img class="card-img" src="images/boot2.jpg" alt="Card image">
-      <div class="card-img-overlay">
-        <h5 class="card-title">Peace Pendant</h5>
-        <p class="card-text">Boot bling featuring a peace symbol pendant</p>
-      </div>
-    </div>
+  <div class="row">
+    <a href="images/lightbox4.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+      <img src="images/lightbox4CROP.jpg" class="img-fluid rounded">
+    </a>
+    <a href="images/lightbox5.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+      <img src="images/lightbox5CROP.jpg" class="img-fluid rounded">
+    </a>
+    <a href="images/lightbox6.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+      <img src="images/lightbox6CROP.jpg" class="img-fluid rounded">
+    </a>
   </div>
-  <div class="col-sm-6 col-lg-3 col-md-4">
-    <div class="card bg-dark text-white">
-      <img class="card-img" src="images/boot3.jpg" alt="Card image">
-      <div class="card-img-overlay">
-        <h5 class="card-title">Horse Pendant</h5>
-        <p class="card-text">Boot bling featuring a horse pendant.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-6 col-lg-3 col-md-4">
-    <div class="card bg-dark text-white">
-      <img class="card-img" src="images/boot4.jpg" alt="Card image">
-      <div class="card-img-overlay">
-        <h5 class="card-title">Variety Pack</h5>
-        <p class="card-text">a variety featuring several different styles of boot bling.</p>
-      </div>
-    </div>
-  </div>
-
-</div><!-- .row -->
+</div>
 
 
   </div><!-- #MainContent -->
@@ -84,10 +69,19 @@
     </div><!-- .socialMedia -->
 
   </footer>
+  <script>
+  $(document).on("click", '[data-toggle="lightbox"]', function(event) {
+  event.preventDefault();
+  $(this).ekkoLightbox();
+});
+</script>
   <script src="scripts/slideshow-auto.js"></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.min.js'></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.min.js"></script>
+  <script  src="scripts/index.js"></script>
 </body>
 
 </html>
